Fix issue with text overflowing

--- a/src/app/css/components/note.css
+++ b/src/app/css/components/note.css
@@ -7,11 +7,14 @@
 
   width: 20vh;
   min-height: 20vh;
+  max-height: 20vh;
   border: 1px solid rgba(0, 0, 0, 0.25);
 
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
   background-color: #cbfafa;
 
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: transform 0.3s linear;
 }
 
@@ -20,8 +23,11 @@
 }
 
 .note__text {
-  margin: 1em;
+  max-height: 20vh;
+  width: 20vh;
+  padding: 1em;
 
+  word-wrap: break-word;
   text-align: center;
   user-select: none;
 }
