--- a/src/app/css/components/noteOptions.css
+++ b/src/app/css/components/noteOptions.css
@@ -19,6 +19,7 @@
   opacity: 0.65;
   transition: transform 0.3s linear, opacity 0.3s linear;
 
+  overflow: visible;
   z-index: 1;
 }
 
